{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 124,
  "lineage": "bb5ad415-60c1-76d6-a173-0a36dc78b7a2",
  "resources": [
    {
      "module": "module.cloudsql",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-09T02:38:02.510-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/baoafrik-prod1/global/addresses/baoafrik-prod-db-priv-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "baoafrik-prod-db-priv-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "prefix_length": 16,
            "project": "baoafrik-prod1",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/addresses/baoafrik-prod-db-priv-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute_prod",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/zones/europe-north2-a/disks/baoafrik-prod-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-12-09T02:56:00.445-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/baoafrik-prod1/zones/europe-north2-a/instances/baoafrik-prod-instance",
            "instance_id": "2920508963278929583",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ashprincepageo:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBNI0Ejw/9NEFZmT2osNgp9ZVDv7UriTTbx4RGBRyJFbb2b87uNP9OzpVvsj7i/kaEOLi9h9UdNjaCVmSCkW99AA= google-ssh {\"userName\":\"ashprincepageo@gmail.com\",\"expireOn\":\"2025-12-12T08:06:31+0000\"}\nashprincepageo:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCOMKgkVled3fYEw/vFg88Ni78Zh/aTZ5cMlbcQNHcAq6SqG+SB7VWkmNqz1oc2Vl38R5Mie8EmCUJbEjmHAhQh+SG1B4AixGnxyHIKk+mnMeUb0vgOwNEBOoKsQMLGKdHiyiDAbE6YvlBGA58/ [...]
            },
            "metadata_fingerprint": "91AR8GEAvH8=",
            "name": "baoafrik-prod-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.51.195.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
                "network_ip": "100.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/regions/europe-north2/subnetworks/baoafrik-prod-vpc-public",
                "subnetwork_project": "baoafrik-prod1"
              }
            ],
            "project": "baoafrik-prod1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/zones/europe-north2-a/instances/baoafrik-prod-instance",
            "service_account": [
              {
                "email": "baoafrik-prod-app-sa@baoafrik-prod1.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.google_service_account.app",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T08:33:30.852-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-db",
            "log_config": [],
            "name": "baoafrik-prod-vpc-allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-prod1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-db",
            "source_ranges": [
              "100.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cloud-sql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-12-11T08:33:30.363-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-egress",
            "log_config": [],
            "name": "baoafrik-prod-vpc-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-prod1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-egress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8080",
                  "3000",
                  "3001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T02:55:24.818-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-web",
            "log_config": [],
            "name": "baoafrik-prod-vpc-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "params": [],
            "priority": 1000,
            "project": "baoafrik-prod1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/firewalls/baoafrik-prod-vpc-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "mtu": 0,
            "name": "baoafrik-prod-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6808510477142476061",
            "numeric_id": "6808510477142476061",
            "project": "baoafrik-prod1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T02:55:25.273-08:00",
            "gateway_address": "100.0.1.1",
            "id": "projects/baoafrik-prod1/regions/europe-north2/subnetworks/baoafrik-prod-vpc-private",
            "ip_cidr_range": "100.0.1.0/24",
            "name": "baoafrik-prod-vpc-private",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "baoafrik-prod1",
            "purpose": "PRIVATE",
            "region": "europe-north2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/regions/europe-north2/subnetworks/baoafrik-prod-vpc-private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1214923022
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T02:55:25.355-08:00",
            "gateway_address": "100.0.0.1",
            "id": "projects/baoafrik-prod1/regions/europe-north2/subnetworks/baoafrik-prod-vpc-public",
            "ip_cidr_range": "100.0.0.0/24",
            "name": "baoafrik-prod-vpc-public",
            "network": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/global/networks/baoafrik-prod-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "baoafrik-prod1",
            "purpose": "PRIVATE",
            "region": "europe-north2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/baoafrik-prod1/regions/europe-north2/subnetworks/baoafrik-prod-vpc-public",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1214923022
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}